# GroupkCLIPPER

./: CMakeLists.txt  README.md
cmake/: clipper.cmake.in
include/: GkCLIPPER.h
src/: CMakeCache.txt  GkCLIPPER.cpp  Makefile  clipper_test.cpp  cmake_install.cmake  gkcm_test.cpp  goats_test.cpp  groupk_clipper.py  ipopt_solve.cpp  lapack_test  main.cpp  path.py  scsConfig.cmake  scsTargets.cmake  temp.cpp  test_blas.cpp
src/python/: clipper_test.py  eigenval_calc.py  groupk_clipper.py  lbfgs.py  optimized_gkc.py  rgnn.py  temp.txt
